--- a/src/app/Components/login/login.component.css
+++ b/src/app/Components/login/login.component.css
@@ -38,7 +38,7 @@ a:active:hover {
 
 #login-form-wrap {
     background-color: #fff;
-    width: 35%;
+    width: 450px;
     margin: 30px auto;
     text-align: center;
     padding: 20px 0 0 0;
