--- a/src/app/Components/offers/offers.component.html
+++ b/src/app/Components/offers/offers.component.html
@@ -80,7 +80,7 @@
             <p class="px-3">{{ offer?._id }}</p>
           </div>
           <div class="col-12">
-            Project Name :
+            Project  :
             <p class="px-3">{{ offer?.project }}</p>
           </div>
           <div class="col-12">
