--- a/src/app/Components/projects/projects.component.html
+++ b/src/app/Components/projects/projects.component.html
@@ -17,7 +17,9 @@
 </div>
 <!---------------------------------------------------------->
 
-<table class="table table-hover table-striped w-100 border">
+<table
+  class="table table-hover table-bordered table-secondary table-striped w-100 border"
+>
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -27,17 +29,11 @@
       <!-- <th scope="col">time</th> -->
       <th scope="col">status</th>
       <th scope="col">createdBy</th>
-      <!-- <th scope="col">controls</th> -->
+      <th scope="col"></th>
     </tr>
   </thead>
   <tbody>
-    <tr
-      (click)="showItem(item)"
-      data-bs-toggle="modal"
-      data-bs-target="#showModal"
-      style="cursor: pointer"
-      *ngFor="let item of projects; index as i"
-    >
+    <tr *ngFor="let item of projects; index as i">
       <th>{{ i + 1 }}</th>
       <td>{{ item.title }}</td>
       <td>{{ item.category }}</td>
@@ -45,20 +41,79 @@
       <!-- <td>{{ item.time }}</td> -->
       <td>{{ item.status }}</td>
       <td>{{ item.createdBy.userName }}</td>
-      <!-- <td>
+      <td>
         <button
           (click)="showItem(item)"
           data-bs-toggle="modal"
           data-bs-target="#showModal"
-          class="btn btn-success text-light"
+          class="btn btn-primary me-1 text-light"
         >
-          Show
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="14"
+            height="14"
+            fill="currentColor"
+            class="bi bi-question-circle"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
+            />
+            <path
+              d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"
+            />
+          </svg>
         </button>
-        <button class="btn btn-danger">del</button>
-      </td> -->
+        <!-- <button
+          (click)="editItem(item)"
+          data-bs-toggle="modal"
+          data-bs-target="#editModal"
+          class="btn btn-success me-1 text-light"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="14"
+            height="14"
+            fill="currentColor"
+            class="bi bi-gear"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"
+            />
+            <path
+              d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"
+            />
+          </svg>
+        </button> -->
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="showItem(item)"
+          data-bs-toggle="modal"
+          data-bs-target="#delModal"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="14"
+            height="14"
+            fill="currentColor"
+            class="bi bi-trash"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+            />
+            <path
+              d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+            />
+          </svg>
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
+
 
 <!-- show model -->
 <div
@@ -68,10 +123,150 @@
   aria-labelledby="showModalLabel"
   aria-hidden="true"
 >
+  <div class="modal-dialog rounded-0">
+    <!-- color -->
+    <div class="modal-content" style="background-color: rgb(217, 228, 228)">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="showModalLabel">User Info</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="row g-2">
+          <p class="px-3 col-12"><b>ID</b> : {{ project?._id }}</p>
+          <span
+            style="width: 90%; height: 2px"
+            class="bg-body-secondary"
+          ></span>
+          <p class="px-3 col-6"><b>project Title : </b> {{ project?.title }}</p>
+          <p class="px-3 col-6"><b>category</b> : {{ project?.category }}</p>
+          <span
+            style="width: 90%; height: 2px"
+            class="bg-body-secondary"
+          ></span>
+
+          <p class="px-3 col-12"><b>Describtion</b>: {{ project?.description }}</p>
+          <span
+            style="width: 90%; height: 2px"
+            class="bg-body-secondary"
+          ></span>
+          <p class="col-6"><b>Num of Offres</b>: {{ project?.offer?.length || 0 }}</p>
+          <p class="col-6"><b>Project time</b>: {{ project?.expectedTime }}</p>
+                  <div class="col-12">
+            <button
+              type="button"
+              (click)="goToOffers(project?._id)"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+            >
+              Offers
+            </button>
+          <span
+            style="width: 90%; height: 2px"
+            class="bg-body-secondary"
+          ></span>
+
+          <p class="col-12"><b>created By </b>: {{ project?.createdBy.userName }}</p>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+
+        <!-- <button
+          *ngIf="user"
+          type="button"
+          class="btn btn-success"
+          data-bs-dismiss="modal"
+          data-bs-toggle="modal"
+          data-bs-target="#changePassModal"
+        >
+          Change password
+        </button> -->
+        <button
+          *ngIf="project"
+          type="button"
+          class="btn btn-danger"
+          data-bs-toggle="modal"
+          data-bs-target="#delModal"
+        >
+          Delete
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<!-- delete model -->
+<div
+  class="modal fade rounded-0"
+  id="delModal"
+  tabindex="-1"
+  aria-labelledby="delModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="showModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="delModalLabel">
+          You Sure to delete {{project?._id}} ?
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <!-- <h3 class="text-center ">{{project?.title}}</h3> -->
+        <div class="image">
+          <img
+            style="width: 100%"
+            src="../../../assets/hands-holding-multiply-symbol.jpg"
+            alt=""
+            srcset=""
+          />
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" 
+        class="btn btn-secondary" 
+        data-bs-dismiss="modal">
+          Close
+        </button>
+
+        <button
+          *ngIf="project"
+          type="button"
+          (click)="deleteItem()"
+          class="btn btn-danger"
+          data-bs-dismiss="modal"
+        >
+          Delete
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- edit Modal -->
+<!-- <div
+  class="modal fade rounded-0"
+  id="editModal"
+  tabindex="-1"
+  aria-labelledby="editModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="editModalLabel">Edit Project</h1>
         <button
           type="button"
           class="btn-close"
@@ -82,8 +277,15 @@
       <div class="modal-body">
         <div class="row g-2">
           <div class="col-12">
-            ID :
-            <p class="px-3">{{ project?._id }}</p>
+              <label  class="form-label"
+                >Project Title</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                placeholder={{project?.title}}
+                [(ngModel)]="data?.title"
+              />
           </div>
           <div class="col-6">
             Title :
@@ -132,4 +334,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
