--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,22 @@ body {
     padding: 0;
 
 }
+::-webkit-scrollbar {
+    width: 15px;
+    padding-left: 10px;
+}
 
+::-webkit-scrollbar-track {
+    background-color: white;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(25, 79, 255);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(32, 84, 255);
+}
 :root {
     --main-bg: '#D04848',
 
