--- a/src/app/Components/charts/bar-chart/bar-chart.component.html
+++ b/src/app/Components/charts/bar-chart/bar-chart.component.html
@@ -1,4 +1,3 @@
-<p>bar-chart works!</p>
-<div class="chart-container">
+<div class="chart-container shadow">
   <canvas id="MyChart">{{ chart }}</canvas>
 </div>
