--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,7 +1,6 @@
-<p>home works!</p>
-<a routerLink="/404">go to not found</a>
 <!-- <router-outlet></router-outlet> -->
-<app-bar-chart></app-bar-chart>
-<h1>pie</h1>
-<app-projects-pie-chart></app-projects-pie-chart>
+<app-finance-chart></app-finance-chart>
+<app-bar-chart class="m-3"></app-bar-chart>
+<!-- <h1>pie</h1> -->
+<app-projects-pie-chart ></app-projects-pie-chart>
 <!--  -->
