--- a/src/app/Components/charts/projects-pie-chart/projects-pie-chart.component.html
+++ b/src/app/Components/charts/projects-pie-chart/projects-pie-chart.component.html
@@ -1,4 +1,125 @@
-<p>projects-pie-chart works!</p>
+<!-- <p>projects-pie-chart works!</p>
 <div class="chart-container">
-  <canvas id="PieChart">{{ pieChart }}</canvas>
+  <canvas id="PieChart"></canvas>
+</div> -->
+<!-- <canvas baseChart [type]="'pie'" [data]="genderChartData"></canvas> -->
+<!-- <canvas baseChart
+  type='pie'
+    [datasets]="pieChartDatasets"
+  [labels]="pieChartLabels"
+  [options]="pieChartOptions"
+  [plugins]="pieChartPlugins"
+  [legend]="pieChartLegend">
+></canvas> -->
+<!-- 
+ <div class="row">
+    <div class="col-lg-8 d-flex align-items-strech">
+      <div class="card w-100 shadow">
+        <div class="card-body">
+          <div class="d-sm-flex d-block align-items-center justify-content-between mb-9">
+            <div class="mb-3 mb-sm-0">
+              <h5 class="card-title fw-semibold">Sales Overview</h5>
+            </div>
+            <div>
+              <select class="form-select">
+                <option value="1">March 2023</option>
+                <option value="2">April 2023</option>
+                <option value="3">May 2023</option>
+                <option value="4">June 2023</option>
+              </select>
+            </div>
+          </div>
+          <div id="chart"></div>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="card overflow-hidden shadow">
+            <div class="card-body  p-4">
+              <div class="row align-items-center">
+                <div class="col-8 py-4">
+                  <h5 class="card-title mb-9 fw-normal">Yearly Revenue</h5>
+                  <h4 class="fw-semibold mb-3">$36,358</h4>
+                  <div class="d-flex align-items-center mb-3">
+                    <span
+                      class="me-1 rounded-circle bg-light-success round-20 d-flex align-items-center justify-content-center">
+                      <i class="ti ti-arrow-up-left text-success"></i>
+                    </span>
+                    <h6 class="text-dark me-1 fs-6 mb-0">+9%</h6>
+                    <p class="fs-6 mb-0">last year</p>
+                  </div>
+                  <div class="d-flex align-items-center">
+                    <div class="me-4">
+                      <span class="round-8 bg-primary rounded-circle me-2 d-inline-block"></span>
+                      <span class="h6 fs-5">2023</span>
+                    </div>
+                    <div>
+                      <span class="round-8 bg-light-primary rounded-circle me-2 d-inline-block"></span>
+                      <span class="fs-5">2024</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="d-flex justify-content-center">
+                    <div id="breakup"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="card shadow">
+            <div class="card-body ">
+              <div class="row alig n-items-start">
+                <div class="col-8">
+                  <h5 class="card-title mb-9 fw-normal"> Monthly Earnings </h5>
+                  <h4 class="fw-semibold mb-3">$6,820</h4>
+                  <div class="d-flex align-items-center pb-1">
+                    <span
+                      class="me-2 rounded-circle bg-light-danger round-20 d-flex align-items-center justify-content-center">
+                      <i class="ti ti-arrow-down-right text-danger"></i>
+                    </span>
+                    <p class="text-dark me-1 fs-6 mb-0">+9%</p>
+                    <p class="fs-6 mb-0">last year</p>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="d-flex justify-content-end">
+                    <div
+                      class="text-white bg-secondary rounded-circle p-6 d-flex align-items-center justify-content-center">
+                      <i class="ti ti-currency-dollar fs-6"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div id="earning"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+<div style="margin: 25px 0" class="row row-cols-2 g-3 border-1 shadow">
+  <apx-chart
+    class="border-1 shadow"
+    [series]="genderSeries"
+    [chart]="genderDetails"
+    [labels]="genderLabels"
+    [title]="genderTitle"
+    [colors]="genderColors"
+    [dataLabels]="genderDataLabels"
+    
+  ></apx-chart>
+  <apx-chart
+    class="border-1 shadow"
+    [series]="userSeries"
+    [chart]="userDetails"
+    [labels]="userLabels"
+    [title]="userTitle"
+    [colors]="userColors"
+  ></apx-chart>
 </div>
