--- a/src/app/Components/page-404/page-404.component.html
+++ b/src/app/Components/page-404/page-404.component.html
@@ -4,6 +4,6 @@
       <h1>404</h1>
       <h2>Page not found</h2>
     </div>
-    <a routerLink="/">Homepage</a>
+    <a routerLink="/home">Homepage</a>
   </div>
 </div>
